# redshift_connect

./: .env.secret  .gitignore  README.md  TEST_postgres_view_permissions.ipynb  applications.py  config.py  connect.ipynb  connect.py  data_masking.ipynb  data_masking.py  database_creator.ipynb  database_creator.py  environments.py  helpers.py  pyproject.toml  random_functions.ipynb  redshift_connection.py  requirements.txt  security_domains.py  service_role.py  sql_to_csv.py  standardize_database.ipynb  standardize_database.py  testing.ipynb  utilities.py  v_find_dropuser_objs.sql  v_generate_user_grant_revoke_ddl.sql  v_get_obj_priv_by_user.sql
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
csv/: all_permissions_all_users.csv  last_10_queries.csv
sql/: all_permissions_all_users.sql  last_10_queries.sql
