[tool.poetry]
name = "redshift_connect"
version = "0.1.0"
description = "Redshift or Postgres"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.0.11"
redshift-connector = "^2.0.906"
python-dotenv = "^0.20.0"
Faker = "^13.12.0"
tqdm = "^4.64.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
