[tool.poetry]
name = "redshift_connect"
version = "0.1.0"
description = "Redshift or Postgres"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.1.18"
redshift-connector = "^2.1.1"
python-dotenv = "^1.0.1"
Faker = "^24.11.0"
tqdm = "^4.66.2"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
